format feedback date, move direct image styles to class and fix the content alignment

--- a/src/components/FeedbackItem/styles.module.css
+++ b/src/components/FeedbackItem/styles.module.css
@@ -1,14 +1,21 @@
 .root {
+    display: flex;
+    align-items: center;
     width: 100%;
 }
 
-.picture {
+.pictureContainer {
     position: relative;
     max-width: 204px;
     height: 204px;
     width: 100%;
     float: left;
     margin-right: 8px;
+}
+
+.picture {
+    object-fit: contain;
+    border-radius: 6px; 
 }
 
 .author {
@@ -20,7 +27,7 @@
 }
 .text {
     margin-top: 16px;
-    height: 140px;
+    /* height: 140px; */
     overflow: hidden;
     text-overflow: ellipsis;
 }
